fixed ipad nav item overflow issue

--- a/src/assets/css/homepage.css
+++ b/src/assets/css/homepage.css
@@ -37,7 +37,7 @@ body {
     margin: 0;
 }
 .nav-item {
-    padding: 22px;
+    padding: 22px 15px;
     display: inline-block;
 }
 
@@ -349,8 +349,11 @@ input {
     margin-bottom: 2%;
     font-size: 1em;
 }
-.message-div input{
+.message-div textarea{
     height: 105px;
+    width: 310px;
+    background-color: #f5f5f5;
+
 }
 .textArea {
     height: 105px;
